[package]
name = "context-aware-filters"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
openai_dive = { version = "0.7.4", features = ["stream"] }
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
